--- a/projects.html
+++ b/projects.html
@@ -205,14 +205,39 @@ $(document).ready(function () {
 <table>
 <tbody>
 <tr class="odd">
-<td>tle: “About”</td>
+<td>tle: “Projects”</td>
 </tr>
 <tr class="even">
 <td>tput: html_document</td>
 </tr>
 </tbody>
 </table>
-<p>Minimalist attempt to record and share knowledge</p>
+<p>Documenting my projects</p>
+<div id="python" class="section level2">
+<h2>Python</h2>
+<ul>
+<li>Given a master spreadsheet, create new spreadsheet for each ID</li>
+<li>Calculate MAC-hours from spreadsheet</li>
+</ul>
+</div>
+<div id="r" class="section level2">
+<h2>R</h2>
+<ul>
+<li>Learning projects</li>
+</ul>
+</div>
+<div id="sikulix" class="section level1">
+<h1>SikuliX</h1>
+<ul>
+<li>Navigate through ancient record keeping software without API to obtain many pages of records</li>
+</ul>
+</div>
+<div id="references" class="section level1">
+<h1>References</h1>
+<ul>
+<li>Beautiful <a href="https://www.rstudio.com/resources/cheatsheets/">cheatsheet</a> for R</li>
+</ul>
+</div>
 
 
 
