--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 
 
-<title></title>
+<title>Projects</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -184,7 +184,7 @@ $(document).ready(function () {
   <a href="projects.html">Projects</a>
 </li>
 <li>
-  <a href="about.html">About Me</a>
+  <a href="about.html">About</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -198,20 +198,11 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<table>
-<tbody>
-<tr class="odd">
-<td>tle: “Projects”</td>
-</tr>
-<tr class="even">
-<td>tput: html_document</td>
-</tr>
-</tbody>
-</table>
 <p>Documenting my projects</p>
 <div id="python" class="section level2">
 <h2>Python</h2>
